--- a/public/main.css
+++ b/public/main.css
@@ -1672,15 +1672,6 @@ html {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.m-auto {
-  margin: auto;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -1689,6 +1680,11 @@ html {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mb-10 {
@@ -1711,10 +1707,6 @@ html {
   margin-left: 2.5rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
 .mt-10 {
   margin-top: 2.5rem;
 }
@@ -1729,18 +1721,6 @@ html {
 
 .mt-9 {
   margin-top: 2.25rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mb-40 {
-  margin-bottom: 10rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
 }
 
 .block {
@@ -1775,6 +1755,10 @@ html {
   height: 1rem;
 }
 
+.h-48 {
+  height: 12rem;
+}
+
 .h-full {
   height: 100%;
 }
@@ -1795,6 +1779,10 @@ html {
   width: 10rem;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
 .w-60 {
   width: 15rem;
 }
@@ -1811,12 +1799,8 @@ html {
   width: 100%;
 }
 
-.w-48 {
-  width: 12rem;
-}
-
-.min-w-48 {
-  min-width: 12rem;
+.max-w-32 {
+  max-width: 8rem;
 }
 
 .max-w-lg {
@@ -1825,10 +1809,6 @@ html {
 
 .max-w-md {
   max-width: 28rem;
-}
-
-.max-w-48 {
-  max-width: 12rem;
 }
 
 .flex-1 {
@@ -1863,22 +1843,18 @@ html {
   gap: 1rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
-.self-end {
-  align-self: flex-end;
 }
 
 .overflow-scroll {
@@ -1941,10 +1917,6 @@ html {
 
 .p-3 {
   padding: 0.75rem;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .p-5 {
@@ -2080,6 +2052,10 @@ html {
   border-bottom-right-radius: 17px;
 }
 
+.flex-2 {
+  flex: 2;
+}
+
 .placeholder\:text-greyDark::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(51 51 51 / var(--tw-text-opacity));
@@ -2145,6 +2121,12 @@ html {
   background-color: rgb(239 235 255 / var(--tw-bg-opacity));
 }
 
+@media not all and (min-width: 1024px) {
+  .max-lg\:hidden {
+    display: none;
+  }
+}
+
 @media not all and (min-width: 768px) {
   .max-md\:hidden {
     display: none;
@@ -2156,46 +2138,16 @@ html {
     margin: 1rem;
   }
 
-  .max-sm\:mx-10 {
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-  }
-
-  .max-sm\:mx-4 {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-  .max-sm\:mr-0 {
-    margin-right: 0px;
-  }
-
-  .max-sm\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
   .max-sm\:hidden {
     display: none;
-  }
-
-  .max-sm\:w-full {
-    width: 100%;
-  }
-
-  .max-sm\:min-w-48 {
-    min-width: 12rem;
-  }
-
-  .max-sm\:max-w-48 {
-    max-width: 12rem;
   }
 
   .max-sm\:flex-col {
     flex-direction: column;
   }
 
-  .max-sm\:gap-4 {
-    gap: 1rem;
+  .max-sm\:items-start {
+    align-items: flex-start;
   }
 }
 
@@ -2217,16 +2169,8 @@ html {
     min-height: 100%;
   }
 
-  .sm\:min-w-48 {
-    min-width: 12rem;
-  }
-
   .sm\:flex-1 {
     flex: 1 1 0%;
-  }
-
-  .sm\:flex-row {
-    flex-direction: row;
   }
 
   .sm\:items-center {
@@ -2243,10 +2187,6 @@ html {
 
   .sm\:gap-4 {
     gap: 1rem;
-  }
-
-  .sm\:gap-5 {
-    gap: 1.25rem;
   }
 
   .sm\:self-end {
