--- a/public/main.css
+++ b/public/main.css
@@ -1688,19 +1688,13 @@ html {
   top: 4rem;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.m-5 {
+  margin: 1.25rem;
 }
 
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
 }
 
 .mb-10 {
@@ -2157,12 +2151,6 @@ html {
   }
 }
 
-@media not all and (min-width: 768px) {
-  .max-md\:hidden {
-    display: none;
-  }
-}
-
 @media not all and (min-width: 640px) {
   .max-sm\:m-4 {
     margin: 1rem;
@@ -2219,13 +2207,13 @@ html {
     gap: 1rem;
   }
 
-  .sm\:self-end {
-    align-self: flex-end;
-  }
-
   .sm\:bg-greyLight {
     --tw-bg-opacity: 1;
     background-color: rgb(250 250 250 / var(--tw-bg-opacity));
+  }
+
+  .sm\:p-10 {
+    padding: 2.5rem;
   }
 
   .sm\:p-4 {
@@ -2234,5 +2222,11 @@ html {
 
   .sm\:text-hl {
     font-size: 32px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:self-end {
+    align-self: flex-end;
   }
 }
